Closed Bug 537044 Opened 15 years ago Closed 15 years ago

toggletoolbar attribute ignored when returning from full screen

Categories

(Core :: Widget: Cocoa, defect)

All
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9.3a1

People

(Reporter: bugmail, Assigned: mstange)

References

Details

Attachments

(1 file)

User-Agent:       Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.6; en-US; rv:1.9.3a1pre) Gecko/20091223 Minefield/3.7a1pre
Build Identifier: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.6; en-US; rv:1.9.3a1pre) Gecko/20091223 Minefield/3.7a1pre

The toolbar toggle pill button shows up after returning from full screen, even though toggletoolbar is set to false. (And is still set to false after full screen is closed.)

Reproducible: Always

Steps to Reproduce:
1. Edit browser.xul (with an overlay or manually) so that toggletoolbar is set to false in the window element
2. Open the browser, observe the lack of pill button
3. Open the window full screen, and close full screen / click the restore button
Actual Results:  
Pill button is there.

Expected Results:  
Pill button is not there.
Assignee: nobody → mstange
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Version: unspecified → Trunk
Attached patch v1Splinter Review
Attachment #419401 - Flags: review?(joshmoz)
Attachment #419401 - Flags: review?(joshmoz) → review+
Flags: wanted1.9.2+
Blocks: 420491
http://hg.mozilla.org/mozilla-central/rev/bf991f7d4b5f
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: