Bug 537044 - toggletoolbar attribute ignored when returning from full screen. r=josh